@@ -1,4 +1,6 @@
 ver 0.16.6 (2010/??/??)
+* decoder:
+  - fix assertion failure when resuming streams
 * event_pipe: fix WIN32 regression
 * define WINVER in ./configure
 * WIN32: autodetect filesystem encoding
